# FlexKalman

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FlexKalmanConfig.cmake.in  HACKING.md  HeaderMerger.py  README.md  combine_headers.py  format-project.sh  normalize-includes.py  uvbiConfig.cmake
apps/unifiedvideoinertial/OfflineProcessing/: CMakeLists.txt  GenerateBlobDebugImage.h  OfflineProcessing.cpp  QuatToEuler.h
apps/unifiedvideoinertial/ParameterFinder/: CMakeLists.txt  CSVTools.h  LoadRows.h  OptimizationBase.h  ParamFindingRoutine.h  ParameterSets.h  TrackerParameterFinder.cpp  TransformFindingRoutine.h  UtilityFunctions.h  newuoa.h
apps/videotrackershared/BlobExtractionDemo/: BlobExtractionDemo.cpp  CMakeLists.txt
inc/: CMakeLists.txt
inc/DirectShowCameraLib/: ConnectTwoFilters.h  GetPin.h  MediaSampleExchange.h  NullRenderFilter.h  SignalEvent.h  base_camera_server.h  dibsize.h  directx_camera_server.h  directx_samplegrabber_callback.h
inc/FlexKalman/: AbsoluteOrientationMeasurement.h  AbsolutePositionLeverArmMeasurement.h  AbsolutePositionMeasurement.h  AngularVelocityMeasurement.h  AugmentedProcessModel.h  AugmentedState.h  ConstantProcess.h  EigenQuatExponentialMap.h  ExternalQuaternion.h  FlexibleKalmanBase.h  FlexibleKalmanCorrect.h  FlexibleKalmanFilter.h  FlexibleKalmanMeta.h  FlexibleUnscentedCorrect.h  MatrixExponentialMap.h  OrientationConstantVelocity.h  OrientationState.h  PoseConstantVelocity.h  PoseConstantVelocityGeneric.h  PoseDampedConstantVelocity.h  PoseSeparatelyDampedConstantVelocity.h  PoseState.h  PoseStateExponentialMap.h  PureVectorState.h  SO3.h  SigmaPointGenerator.h
inc/KalmanFramework/: APIBaseC.h  AbsoluteOrientationMeasurement.h  AbsolutePositionMeasurement.h  Angles.h  AngularVelocityMeasurement.h  AnnotationMacrosC.h  AugmentedProcessModel.h  AugmentedState.h  BoolC.h  CSV.h  CSVCellGroup.h  ChannelCountC.h  ClientReportTypesC.h  ConstantProcess.h  EigenCoreGeometry.h  EigenExtras.h  EigenFilters.h  EigenInterop.h  EigenQuatExponentialMap.h  ExternalQuaternion.h  ExtractYaw.h  Finally.h  FlexibleKalmanBase.h  FlexibleKalmanCorrect.h  FlexibleKalmanFilter.h  FlexibleUnscentedCorrect.h  JSONEigen.h  MathTypesC.h  MatrixExponentialMap.h  MiniArgsHandling.h  OpenCVVersion.h  OrientationConstantVelocity.h  OrientationState.h  Pose3C.h  PoseConstantVelocity.h  PoseDampedConstantVelocity.h  PoseSeparatelyDampedConstantVelocity.h  PoseState.h  PoseStateExponentialMap.h  PureVectorState.h  (+13 more)
inc/KalmanFramework/TypePack/: Always.h  And.h  Apply.h  ApplyList.h  Bool.h  CoerceList.h  Compose.h  Concat.h  Contains.h  Defer.h  FindFirst.h  Fold.h  ForEachType.h  HasType.h  Head.h  If.h  Length.h  List.h  Not.h  Or.h  PushBack.h  PushFront.h  Quote.h  QuoteTrait.h  Size.h  SizeT.h  SplitList.h  T.h  Transform.h  TypeKeyed.h  TypeKeyedMap.h  TypeKeyedTuple.h  TypePack.h  Void.h
inc/unifiedvideoinertial/: APIBaseC.h  AngVelTools.h  Angles.h  BeaconIdTypes.h  BeaconSetupData.h  BodyIdTypes.h  CSV.h  CSVCellGroup.h  CannedIMUMeasurement.h  ConfigParams.h  ConfigurationParser.h  CrossProductMatrix.h  EigenExtras.h  EigenFilters.h  Finally.h  IMUStateMeasurements.h  ImageProcessing.h  MakeHDKTrackingSystem.h  MathTypesC.h  MiniArgsHandling.h  ModelTypes.h  RangeTransform.h  SpaceTransformations.h  Stride.h  TimeValue.h  TimeValueC.h  TrackedBody.h  TrackedBodyTarget.h  TrackingDebugDisplay.h  TrackingSystem.h  TypeSafeId.h  Types.h
inc/unifiedvideoinertial/ImageSources/: ImageSource.h  ImageSourceFactories.h
inc/videotrackershared/: Assert.h  BasicTypes.h  BlobExtractor.h  BlobParams.h  CameraDistortionModel.h  CameraParameters.h  EdgeHoleBasedLedExtractor.h  EdgeHoleBlobExtractor.h  GenericBlobExtractor.h  GetOptionalParameter.h  HDKData.h  IdentifierHelpers.h  LedMeasurement.h  LoadCalibration.h  OpenCVVersion.h  OptionalStream.h  ParseBlobParams.h  ProjectPoint.h  SBDBlobExtractor.h  UndistortMeasurements.h  cvToEigen.h  cvUtils.h
plugins/unifiedvideoinertialtracker/OfflineProcessing/: CMakeLists.txt  CSVCellGroup.h  GenerateBlobDebugImage.h  OfflineProcessing.cpp  QuatToEuler.h
src/FlexKalman/: CMakeLists.txt  Kalman-README.md
src/KalmanFramework/: CMakeLists.txt  TimeValueC.cpp
src/unifiedvideoinertial/: AdditionalReports.h  ApplyIMUToState.cpp  ApplyIMUToState.h  AssignMeasurementsToLeds.h  BeaconSetupData.cpp  BodyTargetInterface.h  CMakeLists.txt  Clamp.h  ClientReportTypesC.h  ConfigParams.cpp  EigenInterop.h  ExtractYaw.h  ForEachTracked.h  HDKLedIdentifier.cpp  HDKLedIdentifier.h  HDKLedIdentifierFactory.cpp  HDKLedIdentifierFactory.h  HistoryContainer.h  IMUMessage.h  ImagePointMeasurement.h  ImageProcessingThread.cpp  ImageProcessingThread.h  LED.cpp  LED.h  LedIdentifier.cpp  LedIdentifier.h  PinholeCameraFlip.h  PoseEstimatorTypes.h  PoseEstimator_RANSAC.cpp  PoseEstimator_RANSAC.h  PoseEstimator_RANSACKalman.cpp  PoseEstimator_RANSACKalman.h  PoseEstimator_SCAATKalman.cpp  PoseEstimator_SCAATKalman.h  ProcessIMUMessage.h  RoomCalibration.cpp  RoomCalibration.h  StateHistory.h  ThreadsafeBodyReporting.cpp  ThreadsafeBodyReporting.h  (+15 more)
src/unifiedvideoinertial/ImageSources/: CMakeLists.txt  CVImageSource.cpp  CheckFirmwareVersion.h  DK2ImageSource.cpp  DirectShowImageSource.cpp  DirectShowToCV.h  FakeImageSource.cpp  ImageSource.cpp  Oculus_DK2.cpp  Oculus_DK2.h  UVCImageSource.cpp
src/videotrackershared/: BlobExtractor.cpp  CMakeLists.txt  EdgeHoleBasedLedExtractor.cpp  EdgeHoleBlobExtractor.cpp  GenericBlobExtractor.cpp  HDKData.cpp  RealtimeLaplacian.h  SBDBlobExtractor.cpp  Tracing.h
tests/cplusplus/: CMakeLists.txt  CatchMain.cpp
tests/cplusplus/Kalman/: BlenderExporter.py  CMakeLists.txt  ContentsInvalid.h  DataDriven.cpp  DataDriven.h  DataDrivenMain.cpp  KalmanAbsOrient.cpp  KalmanCombinedNoNaNs.cpp  KalmanConstruction.cpp  KalmanExpNoNaNs.cpp  KalmanNoNaNs.cpp  KalmanNoNaNsInternals.h  ManualDump.cpp  ManualTest.cpp  ParsePose.h  SmallAngle.cpp  TestHelpers.h  data.csv  data.txt  data2.csv  simulation.blend
tests/cplusplus/Util/: CMakeLists.txt  CSV.h  CSVCellGroup.h  QuatExpMap.cpp
(+163 files in other folders)
