if(Boost_FOUND)
    add_executable(TrackerParameterFinder
        CSVTools.h
        LoadRows.h
        newuoa.h
        OptimizationBase.h
        ParameterSets.h
        ParamFindingRoutine.h
        TrackerParameterFinder.cpp
        TransformFindingRoutine.h
        UtilityFunctions.h)
    target_link_libraries(TrackerParameterFinder
        PRIVATE
        uvbi-core
        videotrackershared_hdkdata
        typepack-headers
        JsonCpp::JsonCpp)
    target_include_directories(TrackerParameterFinder PRIVATE ${BOOST_INCLUDE_DIRS})
endif()
